Closed Bug 558714 Opened 14 years ago Closed 14 years ago

js_ScriptClass doesn't need a reserved slot

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: n.nethercote, Assigned: n.nethercote)

References

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

Attached patch patchSplinter Review
js_ScriptClass has a reserved slot which goes by the name JSSLOT_EXEC_DEPTH.  But it is never used.  This patch removes it and also the request for js_ScriptClass to have this slot.

I fully admit to barely understanding js_ScriptClass;  this patch is something of an educated guess and so I'd appreciate a careful review!  But it does pass trace-tests and jstests.
Attachment #438404 - Flags: review?(brendan)
Comment on attachment 438404 [details] [diff] [review]
patch

Bug 543057 removed the Script object but missed this slot, which was used by it to recompiling a Script object and destroying its running script.

/be
Attachment #438404 - Flags: review?(brendan) → review+
http://hg.mozilla.org/tracemonkey/rev/9bcdd4b44428
Whiteboard: fixed-in-tracemonkey
http://hg.mozilla.org/mozilla-central/rev/9bcdd4b44428
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: