Bug 558714 - js_ScriptClass doesn't need a reserved slot.  r=brendan.